# Gemini-Renamer

./: .env.bak  .gitignore  LICENSE.md  README.md  config.toml  invalidconfig.toml  output.txt  pyproject.toml  rename_log.db  rename_log.db-shm  rename_log.db-wal  rename_main.py  requirements.txt
rename_app/: __init__.py  api_clients.py  cli.py  config_manager.py  enums.py  exceptions.py  file_system_ops.py  log_setup.py  main_processor.py  metadata_fetcher.py  models.py  renamer_engine.py  ui_utils.py  undo_manager.py  utils.py
testing/: simpletvdb.py
tests/: conftest.py  test_api_clients.py  test_cli.py  test_config_manager.py  test_file_system_ops.py  test_log_setup.py  test_main_processor.py  test_renamer.py  test_undo_manager.py  test_utils.py
